home page changes, about page, contact us page

--- a/all-sections.html
+++ b/all-sections.html
@@ -403,6 +403,7 @@
                         alt="Service"
                       />
                     </div>
+                    <div class="product-image-bg"></div>
                     <div class="services__content">
                       <img
                         class="traingle__shape"
