--- a/about.html
+++ b/about.html
@@ -36,7 +36,7 @@
 
     <!-- #region Link CSS -->
     <!-- <link rel="manifest" href="site.webmanifest" /> -->
-    <link rel="shortcut icon" type="image/x-icon" href="img/favicon.png" />
+    <link rel="shortcut icon" type="image/png" href="img/favicon.png" />
     <!-- Place favicon.ico in the root directory -->
 
     <!-- CSS here -->
@@ -163,102 +163,16 @@
                       <nav id="mobile-menu">
                         <ul class="menu-list ps-0">
                           <li>
-                            <a href="#"> Home </a>
-                            <ul class="sub-menu">
-                              <li>
-                                <a href="index.html">Home Style 1</a>
-                              </li>
-                              <li>
-                                <a href="index-2.html">Home Style 2</a>
-                              </li>
-                              <li>
-                                <a href="index-3.html">Home Style 3</a>
-                              </li>
-                            </ul>
+                            <a href="index.html"> Home </a>
                           </li>
                           <li>
-                            <a href="#"> Pages </a>
-                            <ul class="sub-menu">
-                              <li>
-                                <a href="about.html">About Us</a>
-                              </li>
-                              <li>
-                                <a href="#"
-                                  >Services
-                                  <span class="sub-menu-arrow"
-                                    ><i class="bi bi-chevron-down"></i></span
-                                ></a>
-                                <ul class="sub-menu">
-                                  <li>
-                                    <a href="services.html">Services</a>
-                                  </li>
-                                  <li>
-                                    <a href="services-details.html"
-                                      >Services Details</a
-                                    >
-                                  </li>
-                                </ul>
-                              </li>
-                              <li>
-                                <a href="#"
-                                  >Shop
-                                  <span class="sub-menu-arrow"
-                                    ><i class="bi bi-chevron-down"></i></span
-                                ></a>
-                                <ul class="sub-menu">
-                                  <li>
-                                    <a href="product.html">Product</a>
-                                  </li>
-                                  <li>
-                                    <a href="product-details.html"
-                                      >Product Details</a
-                                    >
-                                  </li>
-                                </ul>
-                              </li>
-                              <li>
-                                <a href="team.html">Team</a>
-                              </li>
-                              <li>
-                                <a href="testimonial.html">Testimonial</a>
-                              </li>
-                              <li>
-                                <a href="cart.html">Cart</a>
-                              </li>
-                              <li>
-                                <a href="checkout.html">Checkout</a>
-                              </li>
-                            </ul>
+                            <a href="about.html"> About </a>
                           </li>
                           <li>
-                            <a href="#">Project</a>
-                            <ul class="sub-menu">
-                              <li>
-                                <a href="project-grid.html">Project</a>
-                              </li>
-                              <li>
-                                <a href="project-details.html"
-                                  >Project Details</a
-                                >
-                              </li>
-                            </ul>
+                            <a href="products.html"> Products </a>
                           </li>
                           <li>
-                            <a href="#">Blog</a>
-                            <ul class="sub-menu">
-                              <li>
-                                <a href="blog-grid.html">Blog Grid</a>
-                              </li>
-                              <li>
-                                <a href="blog-classic.html">Blog Classic</a>
-                              </li>
-                              <li>
-                                <a href="blog-details.html">Blog Details</a>
-                              </li>
-                            </ul>
-                          </li>
-                          <li>
-                            <a href="contact.html">contact</a>
+                            <a href="contact.html"> Contact Us </a>
                           </li>
                         </ul>
                       </nav>
@@ -568,7 +482,7 @@
               </div>
             </div>
             <div class="more__btn__box text-center mt-30">
-              <a href="contact.html" class="ht_btn hover-bg"
+              <a href="#" class="ht_btn hover-bg"
                 ><span
                   >See More
                   <img src="assets/img/icon/arrow1.svg" alt="" /></span
@@ -607,19 +521,22 @@
                 <div class="footer__widget mb-30">
                   <ul class="fot-list">
                     <li>
-                      <a href="faq.html">About Us</a>
+                      <a href="about.html">About Us</a>
                     </li>
                     <li>
-                      <a href="faq.html">Products & Services</a>
+                      <a href="products.html">Box culvert</a>
                     </li>
                     <li>
-                      <a href="faq.html">Manufacturing</a>
+                      <a href="products.html">U Shape Drain</a>
                     </li>
                     <li>
-                      <a href="contact.html">Why Precast?</a>
+                      <a href="products.html">Kerb Stone</a>
                     </li>
                     <li>
-                      <a href="contact.html">Gallery</a>
+                      <a href="products.html">Paver Block</a>
+                    </li>
+                    <li>
+                      <a href="contact.html">Contact Us</a>
                     </li>
                   </ul>
                 </div>
