--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
     <!-- #region Link CSS -->
     <!-- <link rel="manifest" href="site.webmanifest" /> -->
-    <link rel="shortcut icon" type="image/x-icon" href="img/favicon.png" />
+    <link rel="shortcut icon" type="image/png" href="img/favicon.png" />
     <!-- Place favicon.ico in the root directory -->
 
     <!-- CSS here -->
@@ -126,7 +126,11 @@
                       <li class="d-none d-lg-inline-block">
                         <div class="header-info-box">
                           <div class="icon">
-                            <img src="assets/img/icon/phone.svg" alt="Phone" />
+                            <img
+                              src="assets/img/icon/icon-time.svg"
+                              alt="Phone"
+                              style="scale: 1.3; margin-right: 6px"
+                            />
                           </div>
                           <div class="text-content">
                             <span>Time</span>
@@ -163,102 +167,16 @@
                       <nav id="mobile-menu">
                         <ul class="menu-list ps-0">
                           <li>
-                            <a href="#"> Home </a>
-                            <ul class="sub-menu">
-                              <li>
-                                <a href="index.html">Home Style 1</a>
-                              </li>
-                              <li>
-                                <a href="index-2.html">Home Style 2</a>
-                              </li>
-                              <li>
-                                <a href="index-3.html">Home Style 3</a>
-                              </li>
-                            </ul>
+                            <a href="index.html"> Home </a>
                           </li>
                           <li>
-                            <a href="#"> Pages </a>
-                            <ul class="sub-menu">
-                              <li>
-                                <a href="about.html">About Us</a>
-                              </li>
-                              <li>
-                                <a href="#"
-                                  >Services
-                                  <span class="sub-menu-arrow"
-                                    ><i class="bi bi-chevron-down"></i></span
-                                ></a>
-                                <ul class="sub-menu">
-                                  <li>
-                                    <a href="services.html">Services</a>
-                                  </li>
-                                  <li>
-                                    <a href="services-details.html"
-                                      >Services Details</a
-                                    >
-                                  </li>
-                                </ul>
-                              </li>
-                              <li>
-                                <a href="#"
-                                  >Shop
-                                  <span class="sub-menu-arrow"
-                                    ><i class="bi bi-chevron-down"></i></span
-                                ></a>
-                                <ul class="sub-menu">
-                                  <li>
-                                    <a href="product.html">Product</a>
-                                  </li>
-                                  <li>
-                                    <a href="product-details.html"
-                                      >Product Details</a
-                                    >
-                                  </li>
-                                </ul>
-                              </li>
-                              <li>
-                                <a href="team.html">Team</a>
-                              </li>
-                              <li>
-                                <a href="testimonial.html">Testimonial</a>
-                              </li>
-                              <li>
-                                <a href="cart.html">Cart</a>
-                              </li>
-                              <li>
-                                <a href="checkout.html">Checkout</a>
-                              </li>
-                            </ul>
+                            <a href="about.html"> About </a>
                           </li>
                           <li>
-                            <a href="#">Project</a>
-                            <ul class="sub-menu">
-                              <li>
-                                <a href="project-grid.html">Project</a>
-                              </li>
-                              <li>
-                                <a href="project-details.html"
-                                  >Project Details</a
-                                >
-                              </li>
-                            </ul>
+                            <a href="products.html"> Products </a>
                           </li>
                           <li>
-                            <a href="#">Blog</a>
-                            <ul class="sub-menu">
-                              <li>
-                                <a href="blog-grid.html">Blog Grid</a>
-                              </li>
-                              <li>
-                                <a href="blog-classic.html">Blog Classic</a>
-                              </li>
-                              <li>
-                                <a href="blog-details.html">Blog Details</a>
-                              </li>
-                            </ul>
-                          </li>
-                          <li>
-                            <a href="contact.html">contact</a>
+                            <a href="contact.html"> Contact Us </a>
                           </li>
                         </ul>
                       </nav>
@@ -417,7 +335,7 @@
               </div>
               <div class="swiper-slide">
                 <img
-                  src="assets/img/hero/hero-main-2a.jpg"
+                  src="assets/img/hero/hero-main-4a.jpg"
                   alt="Hero Image"
                   style="filter: brightness(0.3)"
                 />
@@ -498,7 +416,7 @@
                         with precision to deliver precast excellence that stands
                         the test of time.
                       </p>
-                      <a href="contact.html" class="ht_btn hover-bg"
+                      <a href="about.html" class="ht_btn hover-bg"
                         ><span
                           >More Details
                           <img src="assets/img/icon/arrow1.svg" alt="" /></span
@@ -513,7 +431,10 @@
         <!-- #endregion Home Page about -->
 
         <!-- #region Our Products -->
-        <section class="services__area2 pb-70 pb-lg-45 prevent-select">
+        <section
+          class="services__area2 pb-70 pb-lg-45 prevent-select"
+          id="ourProducts"
+        >
           <div
             class="services__bg__wrapper pt-100 pb-250"
             data-background="assets/img/service/service-bg-1b.jpg"
@@ -565,6 +486,12 @@
                             <span style="color: #e8112b">U Shape</span> Drain
                           </h4>
                         </div>
+                        <div class="snake-line mb-15">
+                          <img
+                            src="assets/img/shape/snake-line-1a.svg"
+                            alt="line"
+                          />
+                        </div>
                         <div class="services__thumb">
                           <img
                             class="w-100"
@@ -587,6 +514,12 @@
                             <span style="color: #e8112b">Box</span> Culverts
                           </h4>
                         </div>
+                        <div class="snake-line mb-15">
+                          <img
+                            src="assets/img/shape/snake-line-1a.svg"
+                            alt="line"
+                          />
+                        </div>
                         <div class="services__thumb">
                           <img
                             class="w-100"
@@ -604,10 +537,16 @@
                       style="width: 396.667px; margin-right: 50px"
                     >
                       <div class="single__services__two mb-60">
-                        <div class="product-name-bg">
+                        <div class="product-name-bg mb-10">
                           <h4 style="color: white">
                             <span style="color: #e8112b">FT Flume</span> Drain
                           </h4>
+                        </div>
+                        <div class="snake-line mb-15">
+                          <img
+                            src="assets/img/shape/snake-line-1a.svg"
+                            alt="line"
+                          />
                         </div>
                         <div class="services__thumb">
                           <img
@@ -631,6 +570,12 @@
                             <span style="color: #e8112b">Retaining</span> Walls
                           </h4>
                         </div>
+                        <div class="snake-line mb-15">
+                          <img
+                            src="assets/img/shape/snake-line-1a.svg"
+                            alt="line"
+                          />
+                        </div>
                         <div class="services__thumb">
                           <img
                             class="w-100"
@@ -652,6 +597,12 @@
                           <h4 style="color: white">
                             <span style="color: #e8112b">Kerb</span> Stones
                           </h4>
+                        </div>
+                        <div class="snake-line mb-15">
+                          <img
+                            src="assets/img/shape/snake-line-1a.svg"
+                            alt="line"
+                          />
                         </div>
                         <div class="services__thumb">
                           <img
@@ -675,6 +626,12 @@
                             <span style="color: #e8112b">Paver</span> Blocks
                           </h4>
                         </div>
+                        <div class="snake-line mb-15">
+                          <img
+                            src="assets/img/shape/snake-line-1a.svg"
+                            alt="line"
+                          />
+                        </div>
                         <div class="services__thumb">
                           <img
                             class="w-100"
@@ -695,7 +652,7 @@
               </div>
             </div>
             <div class="more__btn__box text-center">
-              <a href="contact.html" class="ht_btn hover-bg"
+              <a href="products.html" class="ht_btn hover-bg"
                 ><span
                   >All Products
                   <img src="assets/img/icon/arrow1.svg" alt="" /></span
@@ -728,12 +685,6 @@
                     <h4 class="sub__title__one text-theme mb-20">
                       Our Services
                     </h4>
-                    <!-- <div class="snake-line mb-15">
-                      <img
-                        src="assets/img/shape/snake-line-1a.svg"
-                        alt="line"
-                      />
-                    </div> -->
                     <h2 class="section__title__one">
                       Need a fast, smart solution for your next project?
                     </h2>
@@ -1387,19 +1338,22 @@
                 <div class="footer__widget mb-30">
                   <ul class="fot-list">
                     <li>
-                      <a href="faq.html">About Us</a>
+                      <a href="about.html">About Us</a>
                     </li>
                     <li>
-                      <a href="faq.html">Products & Services</a>
+                      <a href="products.html">Box culvert</a>
                     </li>
                     <li>
-                      <a href="faq.html">Manufacturing</a>
+                      <a href="products.html">U Shape Drain</a>
                     </li>
                     <li>
-                      <a href="contact.html">Why Precast?</a>
+                      <a href="products.html">Kerb Stone</a>
                     </li>
                     <li>
-                      <a href="contact.html">Gallery</a>
+                      <a href="products.html">Paver Block</a>
+                    </li>
+                    <li>
+                      <a href="contact.html">Contact Us</a>
                     </li>
                   </ul>
                 </div>
