about page and home page changes

--- a/about.html
+++ b/about.html
@@ -304,6 +304,88 @@
         </div>
         <!--#endregion Pagebanner-->
 
+        <!-- #region About Company -->
+        <section class="about__area">
+          <div
+            class="about__section__wrapper2 pt-245 pb-140 pt-lg-120 pb-lg-40 pb-md-20"
+          >
+            <img
+              class="about__shape__1"
+              src="assets/img/shape/about-line-2a.svg"
+              alt="About Shape"
+            />
+            <div class="container">
+              <div class="row align-items-center">
+                <div class="col-xl-7 col-lg-6">
+                  <div class="about__img__wrapper__four mb-30">
+                    <img
+                      class="main__img__5d d-none d-xl-inline-block"
+                      src="assets/img/about/about-img-5d.jpg"
+                      alt="About"
+                    />
+                    <img
+                      class="main__img__4b"
+                      src="assets/img/about/about-img-4d.jpg"
+                      alt="About"
+                    />
+                    <div class="experience__box">
+                      <img
+                        class="icon"
+                        src="assets/img/icon/icon-9a.svg"
+                        alt="Icon"
+                      />
+                      <span>A+</span>
+                      <h3>12+ Years Of Experiences</h3>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-xl-5 col-lg-6">
+                  <div class="about__text__wrapper ps-xl-3 mb-30">
+                    <div class="section__title mb-30">
+                      <h4 class="sub__title__one text-theme mb-20">
+                        About Company
+                      </h4>
+                      <h2 class="section__title__one mb-25">
+                        Building the future One piece at a time.
+                      </h2>
+                      <p class="mb-35">
+                        Established In The Year 2012 At Gandhinagar And Gujrat,
+                        We <strong>Perfecto Precast</strong> are a Partnership
+                        Firm, Engaged As The Foremost Manufacturer Of T 6 900mm
+                        Rcc Precast U Shape Drain, Rectangular Concrete Bollard
+                        , 1400mm Precast Rcc Box Culvert Etc. Our commitment to
+                        excellence is evident in every project we undertake, as
+                        we strive to exceed expectations and deliver outstanding
+                        results. Our expeerienced team of skilled professionals,
+                        combined with state-of-the-art concrete manufacturing
+                        facilities, ensures the highest standards of
+                        craftsmanship, efficiency, and reliability.
+                      </p>
+                    </div>
+                    <div class="quote__text mb-20">
+                      “We make a concrete commitment to provide the best
+                      quality, customer-centric solutions using the latest
+                      precast concrete technologies.”
+                    </div>
+                    <div class="author__info">
+                      <!-- <div class="author__img">
+                        <img
+                          src="assets/img/about/author-1b.jpg"
+                          alt="Author"
+                        /> -->
+                    </div>
+                    <div class="auhtor__content">
+                      <h5 class="author__name mb-1">Bharat N Patel</h5>
+                      <p class="author__designation">Perfecto Precast</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
+        <!-- #endregion About Company -->
+
         <!-- #region Our Values -->
         <section
           class="chose__us__area pt-210 pt-lg-90 pt-md-55 pb-80 pb-lg-95"
@@ -392,7 +474,133 @@
           </div>
         </section>
         <!-- #endregion Counter -->
-
+        <!-- #region Working Process -->
+        <section class="working__process__area">
+          <div
+            class="grey-bg process__wrapper__about pt-180 pt-lg-60 pb-320 pb-lg-80 pb-md-90"
+          >
+            <img
+              class="shapes__1"
+              src="assets/img/shape/about-line-2a.svg"
+              alt="shape"
+            />
+            <img
+              class="shapes__2"
+              src="assets/img/shape/faq-line-5a.svg"
+              alt="shape"
+            />
+            <div class="container">
+              <div class="row justify-content-center">
+                <div class="col-lg-6">
+                  <div class="section__title text-center mb-60 pe-xxl-4">
+                    <h4 class="sub__title__one text-theme mb-20">
+                      Working Process
+                    </h4>
+                    <h2 class="section__title__one mb-25">
+                      Our Process: From Concept to Concrete
+                    </h2>
+                  </div>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-md-6">
+                  <div class="single__process__box mb-40">
+                    <img
+                      class="star-icon"
+                      src="assets/img/icon/icon-48d.svg"
+                      alt="icon"
+                    />
+                    <div class="tag">Step 01</div>
+                    <div class="icon mb-25">
+                      <img src="assets/img/icon/icon-44d.svg" alt="Icon" />
+                    </div>
+                    <h4 class="single__box__title">
+                      <a href="#">Project Initiation</a>
+                    </h4>
+                    <p>
+                      We receive the inquiry and our team of engineers studies
+                      the requirements. Based on factors like product type
+                      (e.g., FT flume drain, U-shape drain, kerb stones, paver
+                      blocks, or box culverts), we suggest optimal solutions to
+                      meet the client's needs.
+                    </p>
+                  </div>
+                </div>
+                <div class="col-md-6">
+                  <div class="single__process__box mb-40">
+                    <img
+                      class="star-icon"
+                      src="assets/img/icon/icon-48d.svg"
+                      alt="icon"
+                    />
+                    <div class="tag">Step 02</div>
+                    <div class="icon mb-25">
+                      <img src="assets/img/icon/icon-45d.svg" alt="Icon" />
+                    </div>
+                    <h4 class="single__box__title">
+                      <a href="#"> Design and Planning</a>
+                    </h4>
+                    <p>
+                      Once the client confirms, we begin the mould design and
+                      fabrication process. Simultaneously, our factory team
+                      prepares and plans for production, considering the
+                      specific precast concrete product requirements and the
+                      client's timeline.
+                    </p>
+                  </div>
+                </div>
+                <div class="col-md-6">
+                  <div class="single__process__box mb-40">
+                    <img
+                      class="star-icon"
+                      src="assets/img/icon/icon-48d.svg"
+                      alt="icon"
+                    />
+                    <div class="tag">Step 03</div>
+                    <div class="icon mb-25">
+                      <img src="assets/img/icon/icon-46d.svg" alt="Icon" />
+                    </div>
+                    <h4 class="single__box__title">
+                      <a href="#">Manufacturing</a>
+                    </h4>
+                    <p>
+                      Full-scale production begins, including casting the
+                      concrete products. After casting, the products are moved
+                      to a curing area where they undergo a 2-3 week curing
+                      process using sprinkler systems and gunny bags as
+                      necessary.
+                    </p>
+                  </div>
+                </div>
+                <div class="col-md-6">
+                  <div class="single__process__box mb-40">
+                    <img
+                      class="star-icon"
+                      src="assets/img/icon/icon-48d.svg"
+                      alt="icon"
+                    />
+                    <div class="tag">Step 04</div>
+                    <div class="icon mb-25">
+                      <img src="assets/img/icon/icon-47d.svg" alt="Icon" />
+                    </div>
+                    <h4 class="single__box__title">
+                      <a href="#">Quality Control and Delivery</a>
+                    </h4>
+                    <p>
+                      We conduct thorough inspections to ensure product quality.
+                      After client approval, we load the precast concrete
+                      products onto trucks for delivery. For larger projects, we
+                      can begin installation after the first few deliveries
+                      while continuing to manufacture and deliver the remaining
+                      products.
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
+        <!-- #endregion Working Process -->
         <!-- #region Sectors Served -->
         <section class="blog__area2 pt-85 pt-md-60 pb-90 pb-md-60">
           <div class="big-style-text">Sectors</div>
