--- a/products.html
+++ b/products.html
@@ -105,7 +105,7 @@
                           </div>
                           <div class="text-content">
                             <span>Call</span>
-                            <h6>07923247104</h6>
+                            <h6>9825006202</h6>
                           </div>
                         </div>
                       </li>
@@ -253,11 +253,11 @@
               </p>
               <p>
                 <i class="fal fa-phone"></i>
-                07923247104
+                9825006202
               </p>
               <p>
                 <i class="fal fa-envelope-open"></i>
-                rachitbuildcon@gmail.com
+                prefectoprecast@gmail.com
               </p>
             </div>
           </div>
@@ -465,7 +465,7 @@
               <div class="col-xxl-3 col-lg-4 col-md-6">
                 <div class="footer__widget mb-30">
                   <div class="footer__contact">
-                    <h3 class="phone__nimber mb-25">07923247104</h3>
+                    <h3 class="phone__nimber mb-25">9825006202</h3>
                     <p class="mb-0">Plot No. 711/2,</p>
                     <p class="mb-35">Sector 6-B,Gandhinaar-06</p>
                     <div class="social_media">
