--- a/contact.html
+++ b/contact.html
@@ -105,7 +105,7 @@
                           </div>
                           <div class="text-content">
                             <span>Call</span>
-                            <h6>07923247104</h6>
+                            <h6>9825006202</h6>
                           </div>
                         </div>
                       </li>
@@ -253,11 +253,11 @@
               </p>
               <p>
                 <i class="fal fa-phone"></i>
-                07923247104
+                9825006202
               </p>
               <p>
                 <i class="fal fa-envelope-open"></i>
-                rachitbuildcon@gmail.com
+                prefectoprecast@gmail.com
               </p>
             </div>
           </div>
@@ -314,7 +314,7 @@
                     <div class="icon">
                       <i class="bi bi-telephone"></i>
                     </div>
-                    <span>07923247104</span>
+                    <span>9825006202</span>
                   </div>
                   <div class="single__info__box">
                     <div class="icon">
@@ -326,7 +326,7 @@
                     <div class="icon">
                       <i class="bi bi-envelope"></i>
                     </div>
-                    <span>rachitbuildcon@gmail.com</span>
+                    <span>prefectoprecast@gmail.com</span>
                   </div>
                   <div class="single__info__box mb-40">
                     <div class="icon">
@@ -492,7 +492,7 @@
               <div class="col-xxl-3 col-lg-4 col-md-6">
                 <div class="footer__widget mb-30">
                   <div class="footer__contact">
-                    <h3 class="phone__nimber mb-25">07923247104</h3>
+                    <h3 class="phone__nimber mb-25">9825006202</h3>
                     <p class="mb-0">Plot No. 711/2,</p>
                     <p class="mb-35">Sector 6-B,Gandhinaar-06</p>
                     <div class="social_media">
